--- a/index.html
+++ b/index.html
@@ -1495,10 +1495,12 @@
 								<div class="col-xs-12 no-padding">
 									<input type="checkbox" id="eachPlayerPay">
 									<label for="eachPlayerPay"><span></span>Each player pays for himself <i>(10 coins)</i></label>
+									<span class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
 								</div>
 								<div class="col-xs-12 no-padding">
 									<input type="checkbox" id="payForTeam">
 									<label for="payForTeam"><span></span>Pay for team <i>(50 coins)</i></label>
+									<span class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
 								</div>
 							</div>
 							<div class="col-xs-12 no-padding">
@@ -1552,8 +1554,11 @@
 				</ul>
 			</div>
 			<div class="row middle-row-games">
-				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></p>
-				<p class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1 text-uppercase text-center">check in</p>
+				<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></div>
+				<div id="checkInContainer" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
+					<input type="button" class="col-xs-12 text-uppercase text-center" value="check in" disabled="true">
+					<span id="checkInTooltip" class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
+				</div>
 				<div id="clock" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 text-center middle-info"></div>
 			</div>
 			<div class="row bottom-row">
