--- a/index.html
+++ b/index.html
@@ -138,11 +138,16 @@
 					<li>
 						<a href="#"><img src="images/user-menu.png" alt="profile">Profile</a>
 					</li>
-					<li class="dropdown-submenu">
+					<li class="dropdown-submenu teams-menu">
 						<a tabindex="-1" href="#"><img src="images/users-menu.png" alt="teams">Teams</a>
 						<ul class="dropdown-menu menu-box">
 							<li>
-								<a id="createNewTeamMenuButton" href="#" data-toggle="modal" data-target="#createTeamContainer"><div></div>Create a new team</a>
+								<a id="createNewTeamMenuButton" href="#" data-toggle="modal" data-target="#createTeamContainer">
+									<div>
+										<img src="images/create-new-team.png" alt="create new team">
+									</div>
+									Create team
+								</a>
 							</li>
 							<li>
 								<a href="#">
@@ -211,13 +216,14 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#"><img src="images/logout.png" alt="logout">Logout</a>
+						<a href="#" data-toggle="modal" data-target="#errorContainer"><img src="images/logout.png" alt="logout">Logout</a>
 					</li>
 				</ul>
 			</li>
 			<li id="chat" class="col-md-2 col-md-offset-1 col-lg-1">
 				<div class="menu-size text-center pointer border-bottom">
 					<img src="images/chat.png" alt="chat">
+					<span class="text-uppercase menu-info-box">3</span>
 				</div>
 			</li>
 		</ul>
@@ -295,8 +301,8 @@
 	</div>
 	<div id="alertBox" class="row alert fade in alert-box-wrapper">
 		<div id="alertBoxWrapper" class="row alert-box">
-			<img src="images/warning.png">
-			<p>alert</p>
+			<img src="images/chat-white.png">
+			<p>Look out because you are on a bad path</p>
 		</div>
 	</div>
 	<div id="paymentContainer" class="background-cover modal fade" role="dialog">
@@ -1228,6 +1234,7 @@
 					<div class="col-xs-12">
 						<img src="images/teams-white.png">
 						<input type="text" id="createNewTeamName" placeholder="Create a new team" class="form-click">
+						<span id="createTeamTooltip" class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
 					</div>
 					<div class="col-xs-12">
 						<div id="gamesSlider" class="games-slider">
@@ -1299,10 +1306,25 @@
 							</ul>
 						</div>
 					</div>
+					<div class="col-xs-12">
+						<input type="checkbox" id="acceptNewTeam">
+						<label for="acceptNewTeam" class="col-xs-12 col-sm-8 col-lg-7">I accept terms of use and Privacy Policy<span></span></label>
+					</div>
 					<input type="submit" name="create-team-accept" value="accept" class="col-xs-12 col-sm-4 col-lg-3 text-uppercase text-center">
 				</form>
 			</div>
 		</div>	
+	</div>
+	<div id="errorContainer" class="background-cover modal fade" role="dialog">
+		<div id="errorInnerWrapper" class="row error-wrapper coins-payment modal-dialog">
+			<p class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
+				Are you sure you want to quit?
+			</p>
+			<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+				<button class="col-xs-3 col-xs-offset-2 text-uppercase text-center">yes</button>
+				<button class="col-xs-3  col-xs-offset-1 text-uppercase text-center">no</button>
+			</div>
+		</div>
 	</div>
 </div>
 <div class="container-fluid login">
@@ -1528,7 +1550,7 @@
 							</div>
 							<div class="col-xs-12 no-padding">
 								<input type="button" id="acceptPayment" value="sign up" class="col-xs-12 text-uppercase text-center">
-								<input type="button" id="cancelPayment" value="cancel" class="col-xs-12 text-uppercase text-center">
+								<input type="button" id="cancelPayment" value="cancel" class="col-xs-12 text-uppercase text-center" data-toggle="modal" data-target="#errorContainer">
 							</div>
 						</form>
 					</div>
