--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
 			</button>	
 		</div>
 	</div>
-	<div id="loginContainer" class="background-cover modal fade" role="dialog">
-		<div id="loginInnerWrapper" class="row covering-box login-wrapper modal-dialog">
+	<div id="loginContainer" class="background-cover covering-box modal fade" role="dialog">
+		<div id="loginInnerWrapper" class="row login-wrapper modal-dialog">
 			<h2 class="col-xs-12 text-center text-uppercase">logo</h2>
 			<div class="col-xs-12">
 				<form name="login" id="loginForm" class="col-xs-12">
@@ -379,8 +379,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="registerContainer" class="background-cover">
-		<div id="registerInnerWrapper" class="row covering-box register-wrapper modal-dialog">
+	<div id="registerContainer" class="background-cover covering-box">
+		<div id="registerInnerWrapper" class="row register-wrapper modal-dialog">
 			<h2 class="col-xs-12 text-center text-uppercase">logo</h2>
 			<div class="col-xs-12">
 				<form name="register" id="registerForm" class="col-xs-12">
@@ -1375,8 +1375,8 @@
 					</div>
 				</div>	
 			</div>
-			<div id="chooseTeamContainer" class="background-cover modal fade" role="dialog">
-				<div id="chooseTeamInnerWrapper" class="row covering-box game-page choose-team-wrapper modal-dialog">
+			<div id="chooseTeamContainer" class="background-cover modal fade covering-box" role="dialog">
+				<div id="chooseTeamInnerWrapper" class="row game-page choose-team-wrapper modal-dialog">
 					<h2 class="col-xs-12 text-center text-uppercase">choose or create a new team</h2>
 					<div class="col-xs-12">
 						<form name="choose-team" id="chooseTeamForm" class="col-xs-12">
