--- a/index.html
+++ b/index.html
@@ -1576,8 +1576,17 @@
 				</ul>
 			</div>
 			<div class="row middle-row-games">
-				<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-2 col-md-offset-1 text-center middle-info"></div>
-				<div id="checkInContainer" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-1">
+				<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0 text-center middle-info prize-container">
+					<h6 class="col-xs-12 text-center">Prize</h6>
+					<ul class="col-xs-12">
+						<li>&euro;</li>
+						<li>0</li>
+						<li>0</li>
+						<li>0</li>
+						<li>0</li>
+					</ul>
+				</div>
+				<div id="checkInContainer" class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-0">
 					<input type="button" class="col-xs-12 text-uppercase text-center" value="check in" disabled="true">
 					<span id="checkInTooltip" class="glyphicon glyphicon-question-sign" rel="tooltip" title="Check in"></span>
 				</div>
@@ -1762,5 +1771,6 @@
 <script src="./js/main_app.js"></script>
 <script src="./js/games_app.js"></script>
 <script src="./FlipClock-master/compiled/flipclock.min.js"></script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
