--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
 			</div>
 			<div class="row middle-row-games">
 				<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-0 text-center middle-info prize-container">
-					<h6 class="col-xs-12 text-center">Prize</h6>
+					<h6 class="col-xs-12 text-center">Prize pool</h6>
 					<ul class="col-xs-12">
 						<li>&euro;</li>
 						<li>0</li>
@@ -1771,6 +1771,5 @@
 <script src="./js/main_app.js"></script>
 <script src="./js/games_app.js"></script>
 <script src="./FlipClock-master/compiled/flipclock.min.js"></script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
